packages/beff-core/tests/snapshots/print_router__tests__ok_access_syntatically.snap
---
source: packages/beff-core/tests/print_router.rs
expression: ok(from)
---
type A = { "tag": Tags };
type B = { "t": Tags };
type Tags = "a" | "b";
type Router = { "/hello": { "get": () => B } };

