packages/beff-core/tests/snapshots/print_router__tests__ok_access_union.snap
---
source: packages/beff-core/tests/print_router.rs
expression: ok(from)
---
type A = { "tag": "a" } | { "tag": "b" };
type B = "a" | "b";
type Router = { "/hello": { "get": () => B } };

