packages/beff-core/tests/snapshots/print_router__tests__ok_date.snap
---
source: packages/beff-core/tests/print_router.rs
expression: ok(from)
---
type A = Date;
type Router = { "/hello": { "get": () => A } };

