packages/beff-core/tests/snapshots/print_router__tests__ok_enum.snap
---
source: packages/beff-core/tests/print_router.rs
expression: ok(from)
---
type A = "AAA" | "BBB";
type Router = { "/hello": { "get": () => A } };

