packages/beff-core/tests/snapshots/print_router__tests__ok_enum2.snap
---
source: packages/beff-core/tests/print_router.rs
expression: ok(from)
---
type A = "a" | "b";
type Router = { "/hello": { "get": () => A } };

