packages/beff-core/tests/snapshots/print_router__tests__ok_fmt.snap
---
source: packages/beff-core/tests/print_router.rs
expression: ok(from)
---
type A = string & { "brand": "password" };
type Router = { "/hello": { "get": () => A } };

