packages/beff-core/tests/snapshots/print_router__tests__ok_interface_name.snap
---
source: packages/beff-core/tests/print_router.rs
expression: ok(from)
---
type B = { "a": string };
type Router = { "/hello": { "get": () => B } };

