packages/beff-core/tests/snapshots/print_router__tests__ok_simplify_unions.snap
---
source: packages/beff-core/tests/print_router.rs
expression: ok(from)
---
type A = "a" | "b" | "c" | "d" | "e";
type Router = { "/hello": { "get": () => A } };

