packages/beff-core/tests/snapshots/print_router__tests__ok_template.snap
---
source: packages/beff-core/tests/print_router.rs
expression: ok(from)
---
type Router = { "/hello": { "get": () => { "a": number; "e": string } } };

